# sass-embedded-host-rust

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  embedded_sass.proto  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
benches/bootstrap/: dart-sass.mjs  main.rs  sass-embedded.mjs
dart-sass-embedded/src/: LICENSE  dart-sass-embedded.snapshot
examples/: abc.scss  compile.rs  compile_path.rs  compile_string.rs
examples/big_scss/: main.rs
examples/bootstrap5/: main.rs
ext/sass/: .gitignore  package.json
scripts/: package-lock.json  package.json  setup.mjs
src/: api.rs  channel.rs  compile.rs  compiler.rs  compiler_path.rs  connection.rs  dispatcher.rs  embedded.rs  error.rs  host.rs  importer_registry.rs  legacy.rs  lib.rs  logger_registry.rs  message_transformer.rs  options.rs  packet_transformer.rs  protocol.rs  request_tracker.rs  varint.rs
src copy/: api.rs  compiler.rs  compiler_path.rs  lib.rs  packet_transformer.rs
src copy/pb/: mod.rs
src/host/: importer_registry.rs  logger_registry.rs
src/legacy/: api.rs  importer.rs  options.rs
src/pb/: mod.rs  sass.embedded_protocol.rs  sass_embedded_protocol.rs
src/protocol/: sass.embedded_protocol.rs
tests/: compile_spec.rs  helpers.rs  importer_spec.rs  legacy_importer_spec.rs  legacy_render_spec.rs  logger_spec.rs  sandbox.rs
xtask/build_proto/: Cargo.toml
xtask/build_proto/src/: main.rs
