[package]
name = "sass-embedded-host-rust"
version = "0.1.0"
authors = ["ahabhgk <ahabhgk@gmail.com>"]
edition = "2021"
resolver = "2"
license = "MIT"
description = "A Rust library that will communicate with Embedded Dart Sass using the Embedded Sass Protocol"
repository = "https://github.com/ahabhgk/sass-embedded-host-rust"
documentation = "https://docs.rs/sass-embedded-host-rust"
readme = "README.md"
include = ["**/*.rs", "ext/sass/sass-embedded.proto"]

[features]
default = []
legacy = ["dep:regex", "dep:serde_json", "dep:urlencoding"]

[dependencies]
prost = "0.11"
url = "2"
atty = "0.2"
parking_lot = "0.12"
dashmap = "5"
crossbeam-channel = "0.5"
rustc-hash = "1"
regex = { version = "1", optional = true }
serde_json = { version = "1", optional = true }
urlencoding = { version = "2", optional = true }

[dev-dependencies]
serde_json = "1"
tempfile = "3"
gag = "1"
pathdiff = "0.2"

[build-dependencies]
prost-build = "0.11"
